<resources>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name">FastFoodie</string>
    <string name="app_slogan">Welcome</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign in</b></string>
    <string name="dont_t_have_an_account_sign_up">Dont\'t have an account? Sign up</string>
    <string name="zomato_api_key">9d474634f3dbe47c72d660ad558eca47</string>
    <string name="access_token">pk.eyJ1IjoiY2xvdWRtYXgiLCJhIjoiY2tmejRiOTE4MDdoMTJ6cGRrcmJocHAzbCJ9.LJjV1aK-18AFc_fTFmomSQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_me_text">NEAR</string>
    <string name="open_text">OPEN</string>

</resources>