<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/secular_one"
            android:textSize="30dp"
            android:visibility="invisible"
            android:id="@+id/app_name"
            android:textColor="@color/login_form_color"
            android:text="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:textColor="@color/google_accent_color"
            android:fontFamily="@font/secular_one"
            android:text="@string/sign_up_text"/>
        <!-- SignUp Layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_fullname"
            android:layout_width="match_parent"
            style="@style/TextInputLayoutStyle"
                android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/fullname"
                android:hint="Enter fullname"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_id_layout_field"
            android:layout_width="match_parent"
            style="@style/TextInputLayoutStyle"
            android:transitionName="trans_email"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email_id"
                android:hint="Enter email"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout_field"
            android:transitionName="trans_password"
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:elevation="5dp"
            android:background="@drawable/gradient"
            android:textColor="#ffffff"
            android:id="@+id/sign_up_btn"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <TextView
        android:id="@+id/nav_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_an_account_sign_in"/>
</androidx.constraintlayout.widget.ConstraintLayout>